<?xml version="1.0"?>
<package>
  <name>youbot_pid</name>
  <version>0.1.0</version>
  <description>The youbot_pid package</description>
  <maintainer email="chao.yao@tu-dresden.de">Chao</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>brics_actuator</build_depend> 
  <build_depend>geometry_msgs</build_depend> 
  
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>brics_actuator</run_depend>
  <run_depend>geometry_msgs</run_depend>

</package>
